--- a/rock-paper-scissor.html
+++ b/rock-paper-scissor.html
@@ -6,6 +6,7 @@
 </head>
 <body>
     <h1 style="text-align: center;">Rock Paper Scissors Game</h1>
+    <h4 id="score">No Game Played Yet</h4>
     <p>Click one of the following to play the game</p>
     <button class = "choice-button" id = "rock" onclick="handleRockClick()">👊 Rock</button>
     <button class = "choice-button" id = "paper" onclick="handlePaperClick()">✋ Paper</button>
