storing score in local browser storage code added

--- a/rock-paper-scissor.html
+++ b/rock-paper-scissor.html
@@ -11,6 +11,7 @@
     <button class = "choice-button" id = "rock" onclick="handleRockClick()">👊 Rock</button>
     <button class = "choice-button" id = "paper" onclick="handlePaperClick()">✋ Paper</button>
     <button class = "choice-button" id = "scissors" onclick="handleScissorClick()">✌️ Scissors</button>
+    <button class="resetBtn" onClick = "handleResetBtn()">Reset</button>
     <h4 id="result"></h4>
     <script src="rock-paper-scissor.js"></script>
 </body>
